# Project-2

MachineLib/: ActualMachine.cpp  ActualMachine.h  Arm.cpp  Arm.h  CMakeLists.txt  Component.cpp  Component.h  Gear.cpp  Gear.h  INegotiator.cpp  INegotiator.h  Lever.cpp  Lever.h  Machine.h  MachineDerived.cpp  MachineDerived.h  MachineFactory.cpp  MachineFactory.h  MachineOneFactory.cpp  MachineOneFactory.h  MachineTwoFactory.cpp  MachineTwoFactory.h  MachinesFactory.cpp  MachinesFactory.h  Motor.cpp  Motor.h  Polygon.cpp  Polygon.h  Rod.cpp  Rod.h  Shape.cpp  Shape.h  SinkPosition.cpp  SinkPosition.h  SinkRotation.cpp  SinkRotation.h  SourcePosition.cpp  SourcePosition.h  SourceRotate.cpp  SourceRotate.h
